--- a/index.html
+++ b/index.html
@@ -116,9 +116,8 @@
 					<canvas id="offscreenCanvas" width="28" height="28"></canvas>
 
 					<div id="text_container">
-						<p class="demo_text">Draw an uppercase A or B then press Predict.</p>
+						<p class="demo_text">Draw an A or B then press Predict.</p>
 						<p id="prediction">A</p>
-						<p class="demo_text" id="confidence">Confidence: </p>
 					</div>
 				</div>
 			</div>
